--- a/vignettes/CARNIVAL-vignette.Rnw
+++ b/vignettes/CARNIVAL-vignette.Rnw
@@ -3,6 +3,8 @@
 % with CARNIVAL
 %}
 
+\VignetteEngine{knitr::knitr}
+
 %\VignettePackage{CARNIVAL}
 
 \documentclass{article}
@@ -389,9 +391,9 @@ measurement inputs for CARNIVAL.
 library(viper)
 
 TF_activities = as.data.frame(viper::viper(eset = expr, 
-                                           regulon = regulons, nes = T, 
+                                           regulon = regulons, nes = TRUE, 
                                            method = 'none', minsize = 4, 
-                                           eset.filter = F))
+                                           eset.filter = FALSE))
 
 tfList <- generateTFList(df = TF_activities, top = "all", access_idx = 1)
 @
